--- a/t_start_eta_chip_chim_interpolant_frames.ipynb
+++ b/t_start_eta_chip_chim_interpolant_frames.ipynb
@@ -9,97 +9,46 @@
       "source": [
         "# Interpolant function ofr the starting time in the progenitor parameter space for non-precessing ringdown models\n",
         "\n",
-        "This notebook visualizes the starting time $t_{\\rm start}$ in the progenitor parameter space $(\\eta,\\chi_+,\\chi_-)$, for a given ringdown model.\n",
-        "The procedure to obtain the interpoland is the following.\n",
-        "\n",
-        "1. For a given ringdown model, the mismatch between model and Numerical Relativity data is computed, for different harmonics and different starting times (see Eq. 17 of the paper). The results are provided in the following gitHub repository in avg_mismatches_all_times.npz.\n",
-        "\n",
-        "2. For a given model and $(\\ell,|m|)$ harmonic, we choose a mismatch threshold, and we extrapolate its associated starting time.\n",
-        "\n",
-        "3. We repeat this for all the SXS simulations.\n",
-        "\n",
-        "4. Then, we perform an interpolation in the progenitor parameter space.\n",
-        "\n",
-        "\n",
-        "**Sections:**\n",
-        "1. Install Required Packages\n",
-        "2. Upload Data Files\n",
-        "3. Import Libraries\n",
-        "4. Set Parameters and Load Data\n",
-        "5. Define Helper Functions\n",
-        "6. Plotting and Animation Setup\n",
-        "7. Create and Display Animation"
+        "This notebook visualizes the interpolated function of the starting time $t_{\\rm start}$ in the progenitor parameter space $(\\eta,\\chi_+,\\chi_-)$, for a given ringdown model."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
-      "id": "20dfe120",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "20dfe120",
-        "outputId": "c997277b-1989-461d-ef17-c3151fef6a50"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: seaborn in /home/francesco/miniconda3/lib/python3.10/site-packages (0.12.1)\n",
-            "Requirement already satisfied: matplotlib in /home/francesco/miniconda3/lib/python3.10/site-packages (3.7.5)\n",
-            "Requirement already satisfied: numpy in /home/francesco/miniconda3/lib/python3.10/site-packages (1.24.0)\n",
-            "Requirement already satisfied: pandas in /home/francesco/.local/lib/python3.10/site-packages (2.2.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /home/francesco/.local/lib/python3.10/site-packages (from matplotlib) (0.12.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /home/francesco/.local/lib/python3.10/site-packages (from matplotlib) (2.9.0.post0)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /home/francesco/.local/lib/python3.10/site-packages (from matplotlib) (1.4.5)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /home/francesco/.local/lib/python3.10/site-packages (from matplotlib) (1.2.1)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /home/francesco/miniconda3/lib/python3.10/site-packages (from matplotlib) (3.1.1)\n",
-            "Requirement already satisfied: packaging>=20.0 in /home/francesco/.local/lib/python3.10/site-packages (from matplotlib) (25.0)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /home/francesco/.local/lib/python3.10/site-packages (from matplotlib) (10.3.0)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /home/francesco/.local/lib/python3.10/site-packages (from matplotlib) (4.53.0)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /home/francesco/.local/lib/python3.10/site-packages (from pandas) (2024.1)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /home/francesco/.local/lib/python3.10/site-packages (from pandas) (2024.1)\n",
-            "Requirement already satisfied: six>=1.5 in /home/francesco/.local/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Install required packages (if not already installed)\n",
-        "!pip install seaborn matplotlib numpy pandas"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
       "id": "a3e9fa41",
       "metadata": {
         "id": "a3e9fa41"
       },
       "outputs": [],
       "source": [
-        "# Import required libraries\n",
+        "# Standard library\n",
+        "import os\n",
+        "import io\n",
+        "\n",
+        "# Scientific / numeric\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "from matplotlib.colors import ListedColormap\n",
         "from scipy.interpolate import griddata\n",
+        "\n",
+        "# Plotting\n",
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib import rcParams\n",
+        "from matplotlib.colors import ListedColormap\n",
         "from matplotlib.cm import ScalarMappable\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Animation / display\n",
         "from matplotlib.animation import FuncAnimation, PillowWriter\n",
         "from IPython.display import HTML\n",
-        "import io\n",
-        "import os\n",
         "\n",
-        "from matplotlib import rcParams\n",
-        "rcParams['text.usetex'] = True\n",
-        "rcParams['font.size'] = 22"
+        "# Plot configuration\n",
+        "rcParams['text.usetex'] = False\n",
+        "rcParams['font.size']   = 22"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "gJODCUN5J0yt",
       "metadata": {
         "colab": {
@@ -163,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "2dc9ca3a",
       "metadata": {
         "colab": {
@@ -227,9 +176,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "926dfdce",
-      "metadata": {},
+      "metadata": {
+        "id": "926dfdce",
+        "outputId": "fd2df97b-f412-4135-f4af-852aed3a80f4"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -272,10 +224,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "8da7fb4a",
       "metadata": {
-        "id": "8da7fb4a"
+        "id": "8da7fb4a",
+        "outputId": "0ebfb9e6-eb86-4119-acb6-1667313e4418"
       },
       "outputs": [
         {
@@ -302,14 +255,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "50057444",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "50057444",
-        "outputId": "42270148-e67d-471a-bdae-0b0520271022"
+        "id": "50057444"
       },
       "outputs": [],
       "source": [
@@ -333,7 +282,10 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "414a35a8",
-      "metadata": {},
+      "metadata": {
+        "id": "414a35a8",
+        "outputId": "43e4f9e3-6912-41e4-b71d-8753c7a49255"
+      },
       "outputs": [
         {
           "data": {
@@ -399,7 +351,7 @@
         "\n",
         "    axs[idx].set_xlabel(f\"${label_map[x]}$\")\n",
         "    axs[idx].set_ylabel(f\"${label_map[y]}$\")\n",
-        "    \n",
+        "\n",
         "    # Identify which variable is fixed (not x or y)\n",
         "    fixed_dim = ({\"eta\", \"chip\", \"chim\"} - {x, y}).pop()\n",
         "\n",
@@ -418,10 +370,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "LA2afIbeKjKy",
       "metadata": {
-        "id": "LA2afIbeKjKy"
+        "id": "LA2afIbeKjKy",
+        "outputId": "2b4e4bb9-574a-43b2-8a31-359a81acf30c"
       },
       "outputs": [
         {
