--- a/t_start_eta_chip_chim_scatter.ipynb
+++ b/t_start_eta_chip_chim_scatter.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "rETXuW316qyY"
       },
@@ -53,7 +53,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Ask use the model choice, and the $(\\ell,|m|)$ mode to analyze**"
+        "**Ask use the $(\\ell,|m|)$ mode to analyze**"
       ],
       "metadata": {
         "id": "z-uZtLU1A02q"
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,6 +196,7 @@
         "\"\"\"\n",
         "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
         "\n",
+        "\n",
         "# Set parameters and load data\n",
         "npz_file = 'avg_mismatches_all_times.npz'\n",
         "\n",
@@ -238,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
