--- a/t_start_eta_chip_chim_interpolant_frames.ipynb
+++ b/t_start_eta_chip_chim_interpolant_frames.ipynb
@@ -13,6 +13,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Imports & Settings**"
+      ],
+      "metadata": {
+        "id": "0k2wBEyAedqb"
+      },
+      "id": "0k2wBEyAedqb"
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "id": "a3e9fa41",
@@ -47,68 +57,14 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "gJODCUN5J0yt",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gJODCUN5J0yt",
-        "outputId": "f58dac93-ae3e-4d62-e051-c5f1f5ab7688"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "--2025-11-01 19:05:49--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
-            "Resolving github.com (github.com)... 140.82.121.4\n",
-            "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz [following]\n",
-            "--2025-11-01 19:05:50--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 583752 (570K) [application/octet-stream]\n",
-            "Saving to: ‘avg_mismatches_all_times.npz.1’\n",
-            "\n",
-            "avg_mismatches_all_ 100%[===================>] 570.07K  --.-KB/s    in 0.05s   \n",
-            "\n",
-            "2025-11-01 19:05:50 (12.3 MB/s) - ‘avg_mismatches_all_times.npz.1’ saved [583752/583752]\n",
-            "\n",
-            "--2025-11-01 19:05:50--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
-            "Resolving github.com (github.com)... 140.82.121.4\n",
-            "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt [following]\n",
-            "--2025-11-01 19:05:51--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 21878 (21K) [text/plain]\n",
-            "Saving to: ‘SXS_BBH_nonprec_nonecc_all.txt.1’\n",
-            "\n",
-            "SXS_BBH_nonprec_non 100%[===================>]  21.37K  --.-KB/s    in 0.007s  \n",
-            "\n",
-            "2025-11-01 19:05:51 (2.92 MB/s) - ‘SXS_BBH_nonprec_nonecc_all.txt.1’ saved [21878/21878]\n",
-            "\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "\"\"\"\n",
-        "Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
-        "\"\"\"\n",
-        "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
-        "\n",
-        "\n",
-        "\"\"\"\n",
-        "Load SXS catalog information (https://data.black-holes.org/simulations/index.html). To each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n",
-        "\"\"\"\n",
-        "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n"
-      ]
+        "**Ask use the model choice, and the $(\\ell,|m|)$ mode to analyze**"
+      ],
+      "metadata": {
+        "id": "R7DfX35-eO4C"
+      },
+      "id": "R7DfX35-eO4C"
     },
     {
       "cell_type": "code",
@@ -175,6 +131,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Load mismatch results and NR simulations information**"
+      ],
+      "metadata": {
+        "id": "HELBGxc_eY4F"
+      },
+      "id": "HELBGxc_eY4F"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "926dfdce",
@@ -192,6 +158,16 @@
         }
       ],
       "source": [
+        "\"\"\"\n",
+        "Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
+        "\"\"\"\n",
+        "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
+        "\n",
+        "\"\"\"\n",
+        "Load SXS catalog information (https://data.black-holes.org/simulations/index.html). To each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n",
+        "\"\"\"\n",
+        "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
+        "\n",
         "# Set parameters and load data\n",
         "npz_file = 'avg_mismatches_all_times.npz'\n",
         "\n",
