--- a/t_start_eta_chip_chim_interpolant_frames.ipynb
+++ b/t_start_eta_chip_chim_interpolant_frames.ipynb
@@ -217,9 +217,9 @@
       ],
       "source": [
         "# User inputs for slice position\n",
-        "eta_input = float(input(\"Enter eta (e.g., 0.25): \") or \"0.25\")\n",
-        "chip_input = float(input(\"Enter chi_p (e.g., 0.5): \") or \"0.5\")\n",
-        "chim_input = float(input(\"Enter chi_m (e.g., 0.0): \") or \"0.0\")\n",
+        "eta_input = float(input(\"Enter eta (between 0 and 0.25): \") or \"0.25\")\n",
+        "chip_input = float(input(\"Enter chi_p (between -1 and 1): \") or \"0.5\")\n",
+        "chim_input = float(input(\"Enter chi_m (between -1 and 1): \") or \"0.0\")\n",
         "\n",
         "fixed_vals = {\"eta\": eta_input, \"chip\": chip_input, \"chim\": chim_input}\n",
         "\n",
