--- a/t_start_eta_chip_chim_interpolant_frames.ipynb
+++ b/t_start_eta_chip_chim_interpolant_frames.ipynb
@@ -238,8 +238,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Ask user the $(\\eta,\\chi_+,\\chi_-)$ values and mismatch threshold $\\mathcal{M}_{\\rm th}$**\n",
-        "These values will be the ones for which the"
+        "**Ask user the input values $(\\eta_i,\\chi_{+,i},\\chi_{-,i})$ values and mismatch threshold $\\mathcal{M}_{\\rm th}$**\n",
+        "\n",
+        "These values will be needed to compute the output starting time $t_{\\rm start}(\\eta_i,\\chi_{+,i},\\chi_{-,i}|\\mathcal{M}_{\\rm th})$."
       ],
       "metadata": {
         "id": "31AKlewliXnZ"
