--- a/t_start_eta_chip_chim_scatter.ipynb
+++ b/t_start_eta_chip_chim_scatter.ipynb
@@ -115,7 +115,12 @@
         "id": "9RH0aCuP6qya"
       },
       "source": [
-        "**Load mismatch results and NR simulations information**"
+        "**Load mismatch results and NR simulations information**\n",
+        "Data are loaded directly from the GitHub repository.\n",
+        "\n",
+        "* `avg_mismatches_all_times.npz`: contains, for the London, Cheung and TEOBPM models, the $(\\ell,m)$ mismatch values for different starting times, where $(\\ell,m)=\\{(2,2),(2,1),(3,3),(3,2),(4,4)\\}$.\n",
+        "\n",
+        "* `SXS_BBH_nonprec_nonecc_all.txt`: to each simulation we associate the triplet $(\\eta,\\chi_{+},\\chi_{-})$."
       ],
       "id": "9RH0aCuP6qya"
     },
