--- a/t_start_eta_chip_chim_scatter.ipynb
+++ b/t_start_eta_chip_chim_scatter.ipynb
@@ -190,17 +190,9 @@
         }
       ],
       "source": [
-        "\"\"\"\n",
-        "Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
-        "\"\"\"\n",
         "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
         "\n",
-        "\n",
-        "\"\"\"\n",
-        "Load SXS catalog information (https://data.black-holes.org/simulations/index.html). To each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n",
-        "\"\"\"\n",
         "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
-        "\n",
         "\n",
         "# Set parameters and load data\n",
         "npz_file = 'avg_mismatches_all_times.npz'\n",
@@ -211,8 +203,8 @@
         "\n",
         "# Load SXS catalog\n",
         "catalog_file = 'SXS_BBH_nonprec_nonecc_all.txt'\n",
-        "thresholds = [0.035]\n",
-        "apply_shift = False  # change to True to apply t_shift logic\n",
+        "threshold    = float(input(\"Enter mismatch threshold (between 0 and 1): \") or \"0.035\")\n",
+        "apply_shift   = False\n",
         "\n",
         "data = np.load(npz_file, allow_pickle=True)\n",
         "avg_mismatches = data['avg_mismatches'].item()\n",
